results/experiments/11_90_incorrect/1451/2026-04-29_07-34-54/selection/batfish/candidate_2_vs_candidate_3_reachability.txt
--- Analyzing results/experiments/2026-04-29_06-59-06/1451/2026-04-29_07-34-54/candidates: candidate_2 vs candidate_3 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=amsterdam [10.0.0.33->100.0.25.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet0/1 with resolved next-hop IP: 10.0.0.56, Routes: [ospfE2 (Network: 100.0.25.0/24, Next Hop: interface FastEthernet0/1 ip 10.0.0.56)]), TRANSMITTED(FastEthernet0/1)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet2/1 with resolved next-hop IP: 10.0.0.20, Routes: [ospfE2 (Network: 100.0.25.0/24, Next Hop: interface FastEthernet2/1 ip 10.0.0.20)]), TRANSMITTED(FastEthernet2/1)), (RECEIVED(FastEthern [...]
